testing run of beam via docker on exa4